crates/php-parser/tests/fixtures/errors/invalid_missing_closing_paren_function.php
===source===
<?php
function foo(int $a, $b {
    return $a + $b;
}